--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,3 +8,5 @@ edition = "2021"
 [dependencies]
 evtx = "0.8.0"
 clap = { version = "4.0.26", features = ["derive"] }
+tokio = "1.22.0"
+datafusion = "14.0.0" 
